	 the org.languagetool.gui.Tools class in the languagetool-gui-commons project
	-LanguageToolListener.languageToolEventOccured() has been renamed to
	 LanguageToolListener.languageToolEventOccurred()
	-org.languagetool.tools.SymbolLocator isn't public anymore (shouldn't affect anybody)
	-removed DanishSentenceTokenizer which had been deprecated for three years

-languagetool-wikipedia: the command line options for checking a Wikipedia dump
	have been simplified. The command can now be called like this:
	java -jar languagetool-wikipedia.jar check-data -l en -f enwiki-20130621-pages-articles.xml
	Call just "java -jar languagetool-wikipedia.jar check-data" to get a usage message.
	More than one file can be specified with the -f option. Additionally to Wikipedia
	XML dumps, CSV files from Tatoeba (http://tatoeba.org) are now also supported,
	they need to be filtered first to contain only the relevant language.

-Updated morfologik libraries to 1.7.2 (bug fix)


2.3.1 (2013-10-07, released on Maven Central only)

	-fixes for thread-safety


2.3 (2013-09-30)

-Breton:
	-added/improved a few rules
	-fixed false alarms
	-updated POS dictionary from Apertium (svn r47282)

-Catalan:
	-added support for language code ca-ES-valencia (Catalan Valencian),
	 to be used in LibreOffice 4.2.0
	-added a simple replace rule with hundreds of replacement suggestions
	-added/improved several rules
	-fixed false alarms

-Chinese:
	-added a workaround for a StringIndexOutOfBoundsException
	 (http://sourceforge.net/p/languagetool/bugs/186/)

-English:
	-added replacement patterns for the spelling checker to make suggestions
	 better (now offers 'taught' for 'teached')
	-added/improved a few rules

-French:
	-added/improved a few rules
	-fixed false alarms
	-updated POS tag dictionary and Hunspell dictionary to Dicollecte-4.12

-German:
	-added/improved several rules

-Portuguese:
	-added/improved a few rules
	-it now has 3300+ compound words

-Ukrainian:
	-added/improved several rules

