@@ -76,6 +76,9 @@ LanguageTool Change Log
 	 LanguageToolListener.languageToolEventOccurred()
 	-org.languagetool.tools.SymbolLocator isn't public anymore (shouldn't affect anybody)
 	-removed DanishSentenceTokenizer which had been deprecated for three years
+	-Rule.getCorrectExamples() and Rule.getIncorrectExamples() don't return null anymore
+	 but an empty list if there are no examples. Consequently, setCorrectExamples() and
+	 setIncorrectExamples() don't accept null anymore.
 
 -languagetool-wikipedia: the command line options for checking a Wikipedia dump
 	have been simplified. The command can now be called like this:
